--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="result" id="messages"></div>
   <div class="section1">
-    <button class="hidebutton">hide</button>
+    <button type="button" class="hidebutton">hide</button>
   <h1>Zadania rekrutacyjne JavaScript</h1>
 
   <h2>1. zadanie pierwsze, odwróć stringa - done , SPLIT() REVERSE() JOIN()</h2>
@@ -309,7 +309,215 @@
   </div>
 </div>
 
+<h2>4. projekt las, howler? winnder div i do diva innerhtml oraz if(e.target.classList.contains('treasure')){
+  e.target.innerHTML = images.treasure;</h2>
+<div id="winner"></div>
+<div class="entry flex-row">
+	<div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree treasure">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+  <div class="flex-column">
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+		<div class="tree">🌲</div>
+	</div>
+</div>
 
+<h2>5. tajny kod  , for each button, dataset method, textcontent inside div, </h2>
+<div class="wrapper">
+	<div class="keyboard">
+		<div class="keyboard__row">
+			<button class="keyboard__button" data-value="1">1</button>
+			<button class="keyboard__button" data-value="2">2</button>
+			<button class="keyboard__button" data-value="3">3</button>
+		</div>
+		<div class="keyboard__row">
+			<button class="keyboard__button" data-value="4">4</button>
+			<button class="keyboard__button" data-value="5">5</button>
+			<button class="keyboard__button" data-value="6">6</button>
+		</div>
+		<div class="keyboard__row">
+			<button class="keyboard__button" data-value="7">7</button>
+			<button class="keyboard__button" data-value="8">8</button>
+			<button class="keyboard__button" data-value="9">9</button>
+		</div>
+		<div class="keyboard__row">
+			<button class="keyboard__button keyboard__button--reset" data-value="-99">Reset</button>
+			<button class="keyboard__button" data-value="0">0</button>
+			<button class="keyboard__button keyboard__button--save" data-value="99">Zapisz</button>
+		</div>
+	</div>
+
+  <div class="display">
+
+  </div>
+</div>
+
+<h2>6. księgarnia fetch and get data, zmienne ${zmienna},  </h2>
+<div class="app">
+	<form class="form">
+		<input class="form__input" type="text" id="book-name" name="book-name" placeholder="Nazwa książki"/>
+		<button id="form__button">Wyszukaj</button>
+	</form>
+
+	<ul class="results">
+
+  </ul>
+</div>
+
+<h4>Przygotowano na podstawie <a href="https://www.goodreads.com/api">Goodreads API</a></h4>
+
+<h2>7. sortowanie danych</h2>
+
+
+
+
+  <div class="space">wolne miejsce</div>
   <script src="js/app.js"></script>
   <script src="js/printmessage.js"></script>
   <script src="js/reverseString.js"></script>
@@ -341,6 +549,10 @@
   <script src="js/zarowka.js"></script>
   <script src="js/reprodukcja.js"></script>
   <script src="js/winda.js"></script>
+  <script type="module" src="js/las.js"></script>
+  <script src="js/tajnykod.js"></script>
+  <script src="js/ksiegarnia.js"></script>
+  <script src="js/sortowaniedanych.js"></script>
 
 </body>
 </html>
