--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
   </div>
 </div>
 
-<h2>drag n drop</h2>
+<h2>9. drag n drop, add event listener , dragover and drop /  foreach, datatransfer ? setData </h2>
 <div class="bg-gray-900 p-12 flex justify-center items-top">
 
   <div class=" bg-white overflow-hidden rounded-md p-30 mx-5 max-w-xs flex-1 flex flex-col">
@@ -615,6 +615,74 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
 </div>
 
+<h2>10. koszyk marzen, do powtórki ! parseFloat?</h2>
+<div class="bg-gray-900 p-12 flex justify-center items-top">
+
+  <div class="bg-white rounded-md shadow-md p-5">
+    <h1 class="text-2xl font-bold border-b pb-2">Podsumowanie zamówienia</h1>
+
+    <div class="flex flex-col">
+
+      <div class="flex items-center border-b border-dashed">
+        <div class="flex-auto">
+          <img class="w-10 rounded-sm overflow-hidden" src="https://i.picsum.photos/id/160/200/150.jpg" alt="">
+        </div>
+
+        <div class="flex-auto px-5 py-3">
+          <h2>Kurs "Opanuj JavaScript"</h2>
+          <p class="text-xs">Kurs programowania</p>
+        </div>
+
+        <div class="flex justify-end">
+          <div class="border text-center mx-3"><input class="w-10" type="number" min="1" max="99" value="1"></div>
+          <div class="price">399 zł</div>
+          <div class="pl-4 remove-button"><i class="fas fa-times"></i></div>
+        </div>
+      </div>
+
+      <div class="flex items-center border-b border-dashed">
+        <div class="flex-auto">
+          <img class="w-10 rounded-sm overflow-hidden" src="https://i.picsum.photos/id/450/200/150.jpg" alt="">
+        </div>
+
+        <div class="flex-auto px-5 py-3">
+          <h2>Mentoring z Przemkiem</h2>
+          <p class="text-xs">Indywidualne konsultacje</p>
+        </div>
+
+        <div class="flex justify-end">
+          <div class="border text-center mx-3"><input class="w-10" type="number" min="1" max="99" value="1"></div>
+          <div class="price">150 zł</div>
+          <div class="pl-4 remove-button"><i class="fas fa-times"></i></div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="py-3 flex justify-end items-center">
+      <div class="pr-4">Podsumowanie: <span class="font-bold">549 zł</span></div>
+      <div><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Wchodzę w to!</button></div>
+    </footer>
+
+  </div>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
   <div class="space">wolne miejsce</div>
@@ -655,6 +723,7 @@
   <script src="js/sortowaniedanych.js"></script>
   <script src="js/ciasteczkowypotwor.js"></script>
   <script src="js/dragndrop.js"></script>
+  <script src="js/koszykmarzen.js"></script>
 
 
 
