--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 
       <div class="flex items-center border-b border-dashed">
         <div class="flex-auto">
-          <img class="w-10 rounded-sm overflow-hidden" src="https://i.picsum.photos/id/160/200/150.jpg" alt="">
+          <img class="w-10 rounded-sm overflow-hidden" src="https://www.kaspersky.pl/resources/template/i/icons/product-icon-KSOS.png" alt="">
         </div>
 
         <div class="flex-auto px-5 py-3">
@@ -642,7 +642,7 @@
 
       <div class="flex items-center border-b border-dashed">
         <div class="flex-auto">
-          <img class="w-10 rounded-sm overflow-hidden" src="https://i.picsum.photos/id/450/200/150.jpg" alt="">
+          <img class="w-10 rounded-sm overflow-hidden" src="https://www.kaspersky.pl/resources/template/i/icons/product-icon-KSOS.png" alt="">
         </div>
 
         <div class="flex-auto px-5 py-3">
@@ -670,11 +670,69 @@
 </div>
 
 
+<h2>11.alerty , do powtórki!</h2>
+<div class="bg-gray-900 p-12 flex justify-center items-top">
+
+  <div class="bg-gray-900 p-12 flex justify-center items-top">
+
+    <div class="app-alert-conteiner -m-2 text-center"></div>
+
+    <div class="app-button">
+      <div class="inline-flex items-center bg-white leading-none text-yellow-600 rounded-full p-2 shadow text-sm">
+        <span class="inline-flex bg-yellow-600 text-white rounded-full h-6 px-3 justify-center items-center text-">Alert
+          Maker</span>
+        <span class="inline-flex px-2">Click to create random alert!</span>
+      </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
+</div>
 
 
+<h2>12. pies czy kot,  do powtórzenia , bind method? (binduje this w zakresie globalnym do funkcji np)</h2>
+<div class="bg-gray-900 p-12 flex justify-center items-top">
 
+  <div id="container" class="w-4/5 mx-auto">
+    <h1 class="text-center text-white text-4xl font-bold mb-10">Pies czy kot?</h1>
+    <div class="flex flex-col sm:flex-row">
 
+      <div class="p-2">
+        <div class="bg-blue-500 px-6 py-8 rounded-lg shadow-lg text-center">
+          <p class="counter dog-points">0</p>
+          <div class="dog-container mb-3 flex justify-center">
+            <div>
+              <img class="rounded-md" src="https://cataas.com/cat?711" alt="" />
+            </div>
+          </div>
 
+          <h2 class="dog-id text-xl font-medium text-white pb-5">Pies #771</h2>
+
+          <a href="#" class="dog-btn bg-orange-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center"
+            >Cute!</a
+          >
+        </div>
+      </div>
+
+      <div class="p-2">
+        <div class="bg-blue-500 px-6 py-8 rounded-lg shadow-lg text-center">
+          <p class="counter cat-points">0</p>
+          <div class="cat-container mb-3 flex justify-center">
+            <div>
+              <img class="rounded-md" src="https://cataas.com/cat?712" alt="" />
+            </div>
+          </div>
+          <h2 class="cat-id text-xl font-medium text-white pb-5">Kot #712</h2>
+
+          <a href="#" class="cat-btn bg-orange-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center"
+            >Cute!</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
+</div>
 
 
 
@@ -724,6 +782,8 @@
   <script src="js/ciasteczkowypotwor.js"></script>
   <script src="js/dragndrop.js"></script>
   <script src="js/koszykmarzen.js"></script>
+  <script type="module" src="js/alerty.js"></script>
+  <script src="js/piesczykot.js"></script>
 
 
 
