--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://unpkg.com/tailwindcss@1.0.4/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -734,10 +735,276 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
 </div>
 
+<h2>12. paginacja</h2>
+
+<div class="bg-gray-900">
+  <div class="w-full max-w-screen-xl mx-auto p-6">
+    <div class="relative rounded overflow-hidden mb-8">
+      <div class="p-4 bg-grey-lighter py-8">
+        <div
+          class="bg-white mx-auto max-w-sm shadow-lg rounded-lg overflow-hidden"
+        >
+          <div class="sm:flex sm:items-center px-2 py-4">
+            <div class="flex-grow">
+              <h3
+                class="font-normal px-1 py-3 leading-tight font-bold border-b border-dashed"
+              >
+                Lista kontaktów
+              </h3>
+              <div class="container w-full">
+                <div
+                  class="contact-item flex cursor-pointer my-1 hover:bg-blue-lightest rounded"
+                >
+                  <div class=" w-4/5 h-10 py-3 px-1">
+                    <p class=" hover:text-blue-dark">Peter Petrelli</p>
+                  </div>
+                </div>
+                <div
+                  class="contact-item flex cursor-pointer my-1 hover:bg-blue-lightest rounded"
+                >
+                  <div class=" w-4/5 h-10 py-3 px-1">
+                    <p class=" hover:text-blue-dark">Claire Bennet</p>
+                  </div>
+                </div>
+                <div
+                  class="contact-item flex cursor-pointer my-1 hover:bg-blue-lightest rounded"
+                >
+                  <div class=" w-4/5 h-10 py-3 px-1">
+                    <p class=" hover:text-blue-dark">Hiro Nakamura</p>
+                  </div>
+                </div>
+                <div
+                  class="contact-item flex cursor-pointer my-1 hover:bg-blue-lightest rounded"
+                >
+                  <div class=" w-4/5 h-10 py-3 px-1">
+                    <p class=" hover:text-blue-dark">Nathan Petrelli</p>
+                  </div>
+                </div>
+                <div
+                  class="contact-item flex my-1 cursor-pointer hover:bg-blue-lightest rounded"
+                >
+                  <div class=" w-4/5  h-10 py-3 px-1">
+                    <p class=" hover:text-blue-dark">Sylar</p>
+                  </div>
+                </div>
+                <div
+                  class="contact-item flex my-1 cursor-pointer hover:bg-blue-lightest rounded"
+                >
+                  <div class=" w-4/5  h-10 py-3 px-1">
+                    <p class=" hover:text-blue-dark">Niki Sanders</p>
+                  </div>
+                </div>
+                  <div
+                  class="contact-item flex my-1 cursor-pointer hover:bg-blue-lightest rounded"
+                >
+                  <div class=" w-4/5  h-10 py-3 px-1">
+                    <p class=" hover:text-blue-dark">Kim Kolwiek</p>
+                  </div>
+                </div>
+
+
+            </div>
+          </div>
+          <div class="bg-grey-light px-2 py-4 flex justify-center">
+            <div class="pagination">
+              <ul class="links flex pl-0 list-none rounded my-2">
+                <li
+                  class="relative block py-2 px-3 leading-tight bg-white border border-gray-300 text-blue-700 border-r-0 ml-0 rounded-l hover:bg-gray-200"
+                >
+                  <a class="prev-link page-link" href="#">Previous</a>
+                </li>
+                <li
+                  class="next-link relative block py-2 px-3 leading-tight bg-white border border-gray-300 text-blue-700 rounded-r hover:bg-gray-200"
+                >
+                  <a class=" page-link" href="#" >Next</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
+</div>
+
+<h2>14. modal</h2>
+<div class="h-screen overflow-hidden flex items-center justify-center bg-gray-100">
+
+
+	<div>
+		<button class='page-button bg-red-500 text-white p-2 rounded text-2xl font-bold'>Przyjmuje wyzwanie</button>
+	</div>
+
+	<div class="main-modal fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center "
+		style="background: rgba(0,0,0,.7);">
+		<div
+			class="border border-teal-500 shadow-lg modal-container bg-white w-11/12 md:max-w-md mx-auto rounded shadow-lg z-50 overflow-y-auto">
+			<div class="modal-content py-4 text-left px-6">
+				<!--Title-->
+				<div class="flex justify-between items-center pb-3">
+					<p class="text-2xl font-bold">Czy akceptujesz wyzwanie?</p>
+					<div class="modal-close cursor-pointer z-50">
+						<svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+							viewBox="0 0 18 18">
+							<path
+								d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
+							</path>
+						</svg>
+					</div>
+				</div>
+				<!--Body-->
+				<div class="my-5">
+					<p>Jesteś pewien, że dasz radę 😲?!</p>
+				</div>
+				<!--Footer-->
+				<div class="flex justify-end pt-2">
+					<button
+						class="focus:outline-none modal-close px-4 bg-gray-400 p-3 rounded-lg text-black hover:bg-gray-300">Poddaje się</button>
+					<button
+						class="focus:outline-none modal-close px-4 bg-red-400 p-3 ml-3 rounded-lg text-white hover:bg-red-500">Lecimy!</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<h2>15. progress buttons</h2>
+<div class="h-screen overflow-hidden flex items-center justify-center flex-col" style="background: #edf2f7;">
+  <div class="max-w-xl mx-auto my-4 pb-4">
+<div class="flex pb-3">
+  <div class="flex-1">
+  </div>
+
+<div class="flex-1">
+    <div class="progress-bubble w-10 h-10 bg-white border-2 border-grey-light mx-auto rounded-full text-lg text-white flex items-center">
+      <span class="progress-number text-center w-full">1</span>
+    </div>
+  </div>
 
 
 
+  <div class="w-1/6 align-center items-center align-middle content-center flex">
+    <div class="w-full bg-grey-light rounded items-center align-middle align-center flex-1">
+       <div class="progress-bar bg-green-light text-xs leading-none py-1 text-center text-grey-darkest rounded "></div>
+    </div>
+  </div>
 
+
+    <div class="flex-1">
+    <div class="progress-bubble w-10 h-10 bg-white border-2 border-grey-light mx-auto rounded-full text-lg text-white flex items-center">
+      <span class="progress-number text-center w-full">2</span>
+    </div>
+  </div>
+
+  <div class="w-1/6 align-center items-center align-middle content-center flex">
+    <div class="w-full bg-grey-light rounded items-center align-middle align-center flex-1">
+       <div class="progress-bar  bg-green-light text-xs leading-none py-1 text-center text-grey-darkest rounded " ></div>
+    </div>
+  </div>
+
+  <div class="flex-1">
+    <div class="progress-bubble w-10 h-10 bg-white border-2 border-grey-light mx-auto rounded-full text-lg text-white flex items-center">
+      <span class="progress-number text-grey-darker text-center w-full">3</span>
+    </div>
+  </div>
+
+
+  <div class="w-1/6 align-center items-center align-middle content-center flex">
+    <div class="w-full bg-grey-light rounded items-center align-middle align-center flex-1">
+       <div class="progress-bar  bg-green-light text-xs leading-none py-1 text-center text-grey-darkest rounded " style="width: 0%"></div>
+    </div>
+  </div>
+
+
+  <div class=" flex-1">
+    <div class="progress-bubble w-10 h-10 bg-white border-2 border-grey-light mx-auto rounded-full text-lg text-white flex items-center">
+      <span class="progress-number  text-grey-darker text-center w-full">4</span>
+    </div>
+  </div>
+
+  <div class="flex-1">
+  </div>
+
+</div>
+
+<div class="flex text-xs content-center text-center">
+  <div class="w-1/4">
+    Koszyk
+  </div>
+
+  <div class="w-1/4">
+    Dane osobowe
+  </div>
+
+  <div class="w-1/4">
+    Dostawa
+  </div>
+
+  <div class="w-1/4">
+    Potwierdzenie
+  </div>
+</div>
+</div>
+<div>
+<button class="prev-btn menu-btn bg-transparent hover:bg-red text-red-dark font-semibold hover:text-white py-2 px-4 border border-red hover:border-transparent rounded mr-4">
+  Wróć
+</button>
+<button  class="next-btn menu-btn bg-transparent hover:bg-green text-green-dark font-semibold hover:text-white py-2 px-4 border border-green hover:border-transparent rounded">
+  Dalej
+</button>
+</div>
+</div>
+
+<h2>16. fancy upload, very nice task, files method!!</h2>
+<div class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
+  <div class="flex flex-col w-full h-screen items-center justify-center bg-grey-lighter">
+  <label class="w-64 flex flex-col items-center px-4 py-6 bg-white text-red rounded-lg shadow-lg tracking-wide uppercase border border-red cursor-pointer hover:bg-red hover:text-white">
+      <svg class="w-8 h-8" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+          <path d="M16.88 9.1A4 4 0 0 1 16 17H5a5 5 0 0 1-1-9.9V7a3 3 0 0 1 4.52-2.59A4.98 4.98 0 0 1 17 8c0 .38-.04.74-.12 1.1zM11 11h3l-4-4-4 4h3v3h2v-3z" />
+      </svg>
+      <span class="mt-2 text-base leading-normal">Wybierz plik</span>
+      <input type='file' class="hidden" />
+  </label>
+   <ul class="fileInfo text-red ">
+  </ul>
+
+<button class= "reset hidden px-3 py-2 bg-red text-white rounded-lg shadow-lg tracking-wide uppercase border border-red cursor-pointer">Wyczyść<button>
+
+</div>
+
+</div>
+
+<h2>17. czas jest względny</h2>
+<div class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
+  <div class="custom-number-input h-10 w-40">
+      <label for="custom-input-number" class="w-full text-gray-700 text-sm font-semibold">Licznik czasu
+      </label>
+      <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1 mb-4">
+          <input type="number" class="counter outline-none focus:outline-none text-center w-full bg-gray-300 font-semibold text-md  focus:text-black  md:text-basecursor-default flex items-center text-gray-700  outline-none" name="custom-input-number" value="0" disabled></input>
+      </div>
+      <label for="custom-input-number" class="w-full text-gray-700 text-sm font-semibold">Mnożnik
+      </label>
+      <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1 mb-4">
+          <button data-action="decrement" class=" bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
+              <span class="m-auto text-2xl font-thin">−</span>
+          </button>
+          <input type="number" class="multiplier outline-none focus:outline-none text-center w-full bg-gray-300 font-semibold text-md hover:text-black focus:text-black  md:text-basecursor-default flex items-center text-gray-700  outline-none" name="custom-input-number" value="0"></input>
+          <button data-action="increment" class="bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
+              <span class="m-auto text-2xl font-thin">+</span>
+          </button>
+      </div>
+      <div class="flex flex-row">
+          <button class="stop-btn bg-transparent hover:bg-red text-red-dark font-semibold  py-2 px-4 border border-red hover:border-red rounded mr-4">
+              Stop
+          </button>
+          <button class="start-btn bg-transparent hover:bg-green text-green-dark font-semibold  py-2 px-4 border border-green hover:border-green rounded">
+              Start
+          </button>
+      </div>
+  </div>
+</div>
 
 
 
@@ -784,6 +1051,11 @@
   <script src="js/koszykmarzen.js"></script>
   <script type="module" src="js/alerty.js"></script>
   <script src="js/piesczykot.js"></script>
+  <script src="js/paginacja.js"></script>
+  <script src="js/modal.js"></script>
+  <script src="js/progressbuttons.js"></script>
+  <script src="js/fancyupload.js"></script>
+  <script src="js/czasjestwzgledny.js"></script>
 
 
 
