--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://unpkg.com/tailwindcss@1.0.4/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -1006,6 +1007,96 @@
   </div>
 </div>
 
+<h2>akordeon</h2>
+<div class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
+<div>
+  <main class="accordion-body w-3/5 p-8 mx-auto">
+      <section class="shadow">
+          <article class="border-b">
+              <div class="border-l-2 border-transparent">
+                  <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                      <span class="text-grey-darkest font-thin text-xl">
+                          Massa vitae tortor condimentum lacinia quis vel eros donec
+                      </span>
+                      <div class="rounded-full border border-grey w-7 h-7 flex items-center justify-center">
+                          <!-- icon by feathericons.com -->
+                          <svg aria-hidden="true" class="" data-reactid="266" fill="none" height="24" stroke="#606F7B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                              <polyline points="6 9 12 15 18 9">
+                              </polyline>
+                          </svg>
+                      </div>
+                  </header>
+              </div>
+          </article>
+          <article class="border-b">
+              <div class="border-l-2 border-transparent">
+                  <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                      <span class="text-grey-darkest font-thin text-xl">
+                          Lorem ipsum dolor sit amet
+                      </span>
+                      <div class="rounded-full border border-grey w-7 h-7 flex items-center justify-center">
+                          <!-- icon by feathericons.com -->
+                          <svg aria-hidden="true" class="" data-reactid="266" fill="none" height="24" stroke="#606F7B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                              <polyline points="6 9 12 15 18 9">
+                              </polyline>
+                          </svg>
+                      </div>
+                  </header>
+                  <!-- Lorem ipsum dolor sit amet -->
+                  <!-- <div>
+                      <div class="pl-8 pr-8 pb-5 text-grey-darkest">
+                          <ul class="pl-4">
+                              <li class="pb-2">
+                                  consectetur adipiscing elit
+                              </li>
+                              <li class="pb-2">
+                                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                              </li>
+                              <li class="pb-2">
+                                  Viverra orci sagittis eu volutpat odio facilisis mauris
+                              </li>
+                          </ul>
+                      </div>
+                  </div> -->
+              </div>
+          </article>
+          <article class="border-b">
+              <div class="border-l-2 border-transparent">
+                  <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                      <span class="text-grey-darkest font-thin text-xl">
+                          Lorem dolor sed viverra ipsum
+                      </span>
+                      <div class="rounded-full border border-grey w-7 h-7 flex items-center justify-center">
+                          <!-- icon by feathericons.com -->
+                          <svg aria-hidden="true" class="" data-reactid="266" fill="none" height="24" stroke="#606F7B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                              <polyline points="6 9 12 15 18 9">
+                              </polyline>
+                          </svg>
+                      </div>
+                  </header>
+              </div>
+          </article>
+          <article class="border-b">
+              <div class="border-l-2 border-transparent">
+                  <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                      <span class="text-grey-darkest font-thin text-xl">
+                          Egestas sed tempus urna
+                      </span>
+                      <div class="rounded-full border border-grey w-7 h-7 flex items-center justify-center">
+                          <!-- icon by feathericons.com -->
+                          <svg aria-hidden="true" class="" data-reactid="266" fill="none" height="24" stroke="#606F7B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                              <polyline points="6 9 12 15 18 9">
+                              </polyline>
+                          </svg>
+                      </div>
+                  </header>
+              </div>
+          </article>
+      </section>
+  </main>
+</div>
+</div>
+
 
 
 
@@ -1056,6 +1147,7 @@
   <script src="js/progressbuttons.js"></script>
   <script src="js/fancyupload.js"></script>
   <script src="js/czasjestwzgledny.js"></script>
+  <script src="js/akordeon.js"></script>
 
 
 
